# Cheevo

./: .gitignore  DEPLOY.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_microsoft_sub.py  af5473f08ed3_add_openxbl_token_and_email_to_users.py  b1c2d3e4f5a6_add_minutes_played.py  b3627699c66f_initial_schema.py  c2d3e4f5a6b7_add_dlc_name.py
backend/app/: config.py  db.py  main.py
backend/app/api/routes/: __init__.py  auth.py  games.py  profile.py
backend/app/models/: __init__.py  game.py  user.py
backend/app/schemas/: game.py  user.py
backend/app/services/: crypto.py  openxbl.py  openxbl_auth.py  sync.py  sync_jobs.py
frontend/: .dockerignore  Dockerfile  auth.ts  next.config.ts  package-lock.json  proxy.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/api/openxbl/callback/: route.ts
frontend/app/api/sync/: route.ts
frontend/app/api/sync/start/: route.ts
frontend/app/api/sync/status/: route.ts
frontend/app/games/[titleId]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/setup/: page.tsx
frontend/components/: FirstSync.tsx  GamesGrid.tsx  ProfileBanner.tsx  SyncButton.tsx
frontend/lib/: api.ts  cover.ts  demo.ts  useSync.ts
